# pyikaild

./: README.md  pyproject.toml
.github/workflows/: publish.yaml  python-publish.yml
pyikaild/: __init__.py  ika.py  ild.py  processing.py
tests/: adult_compare_test.py  adult_test.py  base_data.csv  compare_test.py  healthcare_test.py  test_patient.py
