[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyikaild"
version = "0.0.6"
description = "Improved K-Anonymity and l-Diversity library"
authors = [
    "woaitsAryan <yoprince.ab@gmail.com>"
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
keywords = ["anonymization", "anonymization evaluation", "privacy", "data privacy", "data anonymization", "data privacy evaluation"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
build = "^1.2.2.post1"
pydocstyle = "^6.3.0"
pandas-stubs = "^2.2.3.250308"
anonpy = "^1.0.0"
anonypy = "^0.2.1"

[tool.poetry.group.test.dependencies]
ruff = ">=0.2.2"
pytest = ">=8.0.1"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
metadata = true
style = "semver"

[tool.poetry.extras]
lint = ["flake8"]
test = ["pytest", "mypy"]

[tool.ruff]
exclude = ["_version.py", "metasyn/distribution/legacy.*"]
line-length = 100
select = ["E", "F", "W", "I", "N", "D"]

[[tool.mypy.overrides]]
module = [
    "pyikaild.*",
]
ignore_missing_imports = true
